# ucil

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ucil-master-plan-v2.1-final.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: critic.md  docs-writer.md  effectiveness-evaluator.md  executor.md  harness-fixer.md  integration-tester.md  planner.md  root-cause-finder.md  triage.md  verifier.md
.claude/rules/: commit-style.md  py-style.md  rust-style.md  ts-style.md
.githooks/: pre-commit  pre-commit-feature-list  pre-commit-no-ignore  pre-commit-secret-scan  pre-push
.github/workflows/: ci.yml
adapters/: biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
adapters/src/: index.ts
crates/ucil-agents/: Cargo.toml
crates/ucil-agents/src/: lib.rs
crates/ucil-cli/: Cargo.toml
crates/ucil-cli/src/: lib.rs  main.rs
crates/ucil-cli/src/commands/: init.rs  mod.rs  plugin.rs
crates/ucil-cli/tests/: init.rs
crates/ucil-core/: Cargo.toml
crates/ucil-core/src/: bonus_selector.rs  ceqp.rs  context_compiler.rs  cross_group.rs  feedback.rs  fusion.rs  incremental.rs  knowledge_graph.rs  lib.rs  otel.rs  schema_migration.rs  tier_merger.rs  types.rs
crates/ucil-core/tests/: fixture.rs  proptest_types.proptest-regressions  proptest_types.rs  smoke.rs
crates/ucil-daemon/: Cargo.toml  default_13350824894496192213_0_1200157.profraw  default_18405299573907419787_0_1200155.profraw  default_2497127770543755080_0_1200159.profraw  default_3183232135136636366_0_1200042.profraw  default_5210022480620493303_0_1200158.profraw  default_5592791308476164965_0_1200160.profraw  default_9658014437819891000_0_1200156.profraw
crates/ucil-daemon/src/: agent_scheduler.rs  branch_manager.rs  executor.rs  g2_search.rs  g3.rs  g4.rs  g5.rs  g7.rs  g8.rs  lancedb_indexer.rs  lib.rs  lifecycle.rs  main.rs  plugin_manager.rs  priority_queue.rs  scip.rs  server.rs  session_manager.rs  session_ttl.rs  startup.rs  storage.rs  test_support.rs  text_search.rs  understand_code.rs  watcher.rs
crates/ucil-daemon/tests/: e2e_mcp_stdio.rs  e2e_mcp_with_kg.rs  g3_plugin_manifests.rs  g4_plugin_manifests.rs  g5_plugin_manifests.rs  g6_plugin_manifests.rs  g7_plugin_manifests.rs  g8_plugin_manifests.rs  plugin_manager.rs  plugin_manifests.rs
crates/ucil-daemon/tests/support/: mock_mcp_plugin.rs
crates/ucil-embeddings/: Cargo.toml
crates/ucil-embeddings/benches/: throughput.rs  vector_query.rs
crates/ucil-embeddings/src/: chunker.rs  config.rs  lib.rs  models.rs  onnx_inference.rs
crates/ucil-embeddings/tests/data/: build_minimal_onnx.py  minimal.onnx  sample.rs
crates/ucil-lsp-diagnostics/: Cargo.toml
crates/ucil-lsp-diagnostics/src/: bridge.rs  call_hierarchy.rs  diagnostics.rs  lib.rs  quality_pipeline.rs  server_sharing.rs  types.rs
crates/ucil-treesitter/: Cargo.toml
crates/ucil-treesitter/src/: chunker.rs  lib.rs  parser.rs  symbols.rs  tag_cache.rs
crates/ucil-treesitter/tests/: chunker_oracle_safeguard.rs  chunker_public_api_guard.rs  symbol_ext_integration.rs  symbols.rs  tag_cache_integration.rs  tag_cache_oracle_safeguard.rs
ml/: pyproject.toml
ml/models/coderankembed/: .gitignore
ml/src/ucil_ml/: __init__.py
scripts/: _cost-budget.sh  _load-auth.sh  _otel-collector.sh  _retry.sh  _trace.sh  _watchdog.sh  auto-commit-build.sh  bench-embed-throughput.sh  bench-vector-query.sh  bootstrap.sh  cost-summary.sh  flip-feature.sh  gate-check.sh  install-prereqs.sh  install-watchdog.sh  merge-wo.sh  prune-merged-worktrees.sh  push-with-retry.sh  reality-check.sh  recover-network.sh  resume.sh  run-all.sh  run-critic.sh  run-effectiveness-evaluator.sh  run-executor.sh  run-harness-fixer.sh  run-integration-tester.sh  run-phase.sh  run-planner.sh  run-root-cause-finder.sh  run-triage.sh  seed-features-chunked.sh  seed-features.sh  setup-build-cache.sh  spawn-verifier.sh  test-orphan-cleanup.sh  test-resume.sh  verify-harness.sh
scripts/devtools/: install-ast-grep.sh  install-codebase-memory-mcp.sh  install-codegraphcontext-mcp.sh  install-coderankembed.sh  install-context7-mcp.sh  install-dependency-cruiser.sh  install-eslint-mcp.sh  install-filesystem-mcp.sh  install-git-mcp.sh  install-github-mcp.sh  install-graphiti-mcp.sh  install-mcp-pytest-runner.sh  install-mem0-mcp.sh  install-probe.sh  install-repomix-mcp.sh  install-ripgrep.sh  install-ruff-mcp.sh  install-scip-rust.sh  install-scip.sh  install-semgrep-mcp.sh  install-test-runner-mcp.sh  install-zoekt.sh
scripts/gate/: phase-0.sh  phase-1.sh  phase-2.sh  phase-3.5.sh  phase-3.sh  phase-4.sh  phase-5.sh  phase-6.sh  phase-7.sh  phase-8.sh
scripts/verify/: P0-W1-F03.sh  P0-W1-F08.sh  P0-W1-F10.sh  P0-W1-F12.sh  P0-W1-F14.sh  P1-W5-F01.sh  P2-W6-F05.sh  P2-W6-F06.sh  P2-W6-F07.sh  P2-W6-F08.sh  P2-W7-F01.sh  P2-W7-F02.sh  P2-W7-F03.sh  P2-W7-F06.sh  P2-W7-F07.sh  P2-W7-F08.sh  P2-W7-F09.sh  P2-W8-F01.sh  P2-W8-F02.sh  P2-W8-F03.sh  P2-W8-F04.sh  P2-W8-F05.sh  P2-W8-F06.sh  P2-W8-F07.sh  P2-W8-F08.sh  P3-W10-F02.sh  P3-W10-F03.sh  P3-W10-F04.sh  P3-W10-F05.sh  P3-W10-F06.sh  P3-W10-F07.sh  P3-W10-F10.sh  P3-W10-F12.sh  P3-W10-F13.sh  P3-W10-F14.sh  P3-W10-F15.sh  P3-W11-F01.sh  P3-W11-F02.sh  P3-W11-F03.sh  P3-W11-F04.sh  (+77 more)
tests/fixtures/mixed-project/: Cargo.toml  package.json  pyproject.toml
tests/fixtures/mixed-project/src/: index.ts  main.py  main.rs
tests/fixtures/mixed-project/tests/: index.test.ts  integration_test.rs  test_main.py
tests/fixtures/python-project/: pyproject.toml
tests/fixtures/python-project/src/python_project/: __init__.py  evaluator.py  lexer.py  parser.py  scoring.py  types.py
tests/fixtures/python-project/tests/: test_evaluator.py  test_lexer.py  test_parser.py  test_scoring.py
tests/integration/: Cargo.toml  test_fusion.rs  test_incremental.rs  test_lsp_bridge.rs  test_plugin_lifecycle.rs  test_quality_pipeline.rs  test_query_pipeline.rs  test_testing_pipeline.rs
tests/integration/src/: lib.rs
tests/scenarios/: README.md  (+4 more)
ucil-build/: CLAUDE.md  README.md  feature-list.json  progress.json  triage-log.md
(+1314 files in other folders)
