[workspace]
resolver = "2"
members = [
    "crates/ucil-core",
    "crates/ucil-daemon",
    "crates/ucil-cli",
    "crates/ucil-treesitter",
    "crates/ucil-lsp-diagnostics",
    "crates/ucil-agents",
    "crates/ucil-embeddings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RishiDarkDevil <rishi8001100192@gmail.com>"]
license = "MIT"
repository = "https://github.com/RishiDarkDevil/ucil"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embedded SQLite (bundled = static link, no system libsqlite3 required)
rusqlite = { version = "0.31", features = ["bundled"] }

# OpenTelemetry — stdout-only exporter for Phase 0 (invariant 8)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-stdout = { version = "0.27", features = ["trace"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# TOML serialization for ucil.toml
toml = "0.8"

# Test helpers
tempfile = "3"

# Filesystem change notifications + debouncer — backs the `ucil-daemon`
# file watcher (master-plan §18 Phase 1 Week 3 line 1741, feature
# `P1-W3-F02`). Editor/filesystem writes flow through
# `notify-debouncer-full` with a 100 ms debounce window; PostToolUse hook
# events bypass the debouncer entirely (master-plan §14 lines 1024-1025).
# `notify` 6 and `notify-debouncer-full` 0.3 are a compatible pair
# maintained by the notify-rs org.
notify = "6"
notify-debouncer-full = "0.3"

# tree-sitter — multi-language parser (Phase 1 Week 2)
# Grammar crates at 0.23–0.25 use grammar ABI version 15 which requires
# tree-sitter >= 0.25 (0.24.x only supports up to ABI 14).
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"

# Unique IDs for session manager
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps for bi-temporal queries on the knowledge graph — used by
# `ucil-core::knowledge_graph` for RFC-3339 encoding of `t_valid_from` /
# `t_valid_to` so SQLite TEXT string-comparison is lexicographic.
# `default-features = false` avoids the `oldtime` / `time 0.1`
# transitive chain (clippy-deny warnings on some rustc versions — see
# WO-0012 RCA §Risk point 5).  Phase 1 Week 4 (WO-0024).
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Recursive filesystem walker for plugin discovery (Phase 1 Week 5)
walkdir = "2"

# LSP community types (LSP 3.17 wire structs) — used by
# `ucil-lsp-diagnostics::diagnostics` for `Diagnostic`,
# `CallHierarchyItem`, `CallHierarchyIncomingCall`,
# `CallHierarchyOutgoingCall`, and `TypeHierarchyItem` so UCIL does not
# hand-roll LSP wire types.  Introduced in Phase 1 Week 5 (WO-0015).
lsp-types = "0.95"

# Object-safe async trait macro — used by the `SerenaClient` trait in
# `ucil-lsp-diagnostics` so the bridge can hold an
# `Arc<dyn SerenaClient + Send + Sync>` across `.await` points.
async-trait = "0.1"

# Streaming iterator — required by tree-sitter 0.25's `QueryMatches`, which
# yields captures via `StreamingIterator` (not `Iterator`) so the internal
# match buffer can be reused across iterations.  Used by
# `ucil-treesitter::symbols` (Phase 1 Week 2, WO-0017).
streaming-iterator = "0.1"

# LMDB embedded key-value store (typed wrapper via `heed`) — backs the
# tree-sitter tag cache keyed by `(file_path, mtime)`.  Used by
# `ucil-treesitter::tag_cache` (Phase 1 Week 2, WO-0018).  `heed` 0.20
# bundles `lmdb-master3-sys` which statically links LMDB — no system
# LMDB required.
heed = "0.20"

# Binary serialization for the LMDB value codec (tag cache).  `bincode` 1.3
# is the stable, widely-used serde-integrated binary encoder; v2 (alpha)
# adds zero-copy borrowing but breaks API — v1 is the pragmatic pick for
# Phase 1 Week 2 (WO-0018).
bincode = "1.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
