[workspace]
resolver = "2"
members = [
    "crates/ucil-core",
    "crates/ucil-daemon",
    "crates/ucil-cli",
    "crates/ucil-treesitter",
    "crates/ucil-lsp-diagnostics",
    "crates/ucil-agents",
    "crates/ucil-embeddings",
    "tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RishiDarkDevil <rishi8001100192@gmail.com>"]
license = "MIT"
repository = "https://github.com/RishiDarkDevil/ucil"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Embedded SQLite (bundled = static link, no system libsqlite3 required)
rusqlite = { version = "0.31", features = ["bundled"] }

# OpenTelemetry — stdout-only exporter for Phase 0 (invariant 8)
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["trace"] }
opentelemetry-stdout = { version = "0.27", features = ["trace"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# TOML serialization for ucil.toml
toml = "0.8"

# Test helpers
tempfile = "3"

# Filesystem change notifications + debouncer — backs the `ucil-daemon`
# file watcher (master-plan §18 Phase 1 Week 3 line 1741, feature
# `P1-W3-F02`). Editor/filesystem writes flow through
# `notify-debouncer-full` with a 100 ms debounce window; PostToolUse hook
# events bypass the debouncer entirely (master-plan §14 lines 1024-1025).
# `notify` 6 and `notify-debouncer-full` 0.3 are a compatible pair
# maintained by the notify-rs org.
notify = "6"
notify-debouncer-full = "0.3"

# tree-sitter — multi-language parser (Phase 1 Week 2)
# Grammar crates at 0.23–0.25 use grammar ABI version 15 which requires
# tree-sitter >= 0.25 (0.24.x only supports up to ABI 14).
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.25"
tree-sitter-json = "0.24"

# Unique IDs for session manager
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps for bi-temporal queries on the knowledge graph — used by
# `ucil-core::knowledge_graph` for RFC-3339 encoding of `t_valid_from` /
# `t_valid_to` so SQLite TEXT string-comparison is lexicographic.
# `default-features = false` avoids the `oldtime` / `time 0.1`
# transitive chain (clippy-deny warnings on some rustc versions — see
# WO-0012 RCA §Risk point 5).  Phase 1 Week 4 (WO-0024).
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }

# Recursive filesystem walker for plugin discovery (Phase 1 Week 5)
walkdir = "2"

# Cross-platform executable lookup on the `PATH`. Used by
# `ucil-daemon::watcher::detect_watchman` (WO-0039 / P1-W3-F03) — master-plan
# §2 line 138 specifies watchman as an optional upgrade for repos >50K files.
# `which` 7.x is the current line, used by cargo and rust-analyzer.
which = "7"

# LSP community types (LSP 3.17 wire structs) — used by
# `ucil-lsp-diagnostics::diagnostics` for `Diagnostic`,
# `CallHierarchyItem`, `CallHierarchyIncomingCall`,
# `CallHierarchyOutgoingCall`, and `TypeHierarchyItem` so UCIL does not
# hand-roll LSP wire types.  Introduced in Phase 1 Week 5 (WO-0015).
lsp-types = "0.95"

# Object-safe async trait macro — used by the `SerenaClient` trait in
# `ucil-lsp-diagnostics` so the bridge can hold an
# `Arc<dyn SerenaClient + Send + Sync>` across `.await` points.
async-trait = "0.1"

# Streaming iterator — required by tree-sitter 0.25's `QueryMatches`, which
# yields captures via `StreamingIterator` (not `Iterator`) so the internal
# match buffer can be reused across iterations.  Used by
# `ucil-treesitter::symbols` (Phase 1 Week 2, WO-0017).
streaming-iterator = "0.1"

# LMDB embedded key-value store (typed wrapper via `heed`) — backs the
# tree-sitter tag cache keyed by `(file_path, mtime)`.  Used by
# `ucil-treesitter::tag_cache` (Phase 1 Week 2, WO-0018).  `heed` 0.20
# bundles `lmdb-master3-sys` which statically links LMDB — no system
# LMDB required.
heed = "0.20"

# Binary serialization for the LMDB value codec (tag cache).  `bincode` 1.3
# is the stable, widely-used serde-integrated binary encoder; v2 (alpha)
# adds zero-copy borrowing but breaks API — v1 is the pragmatic pick for
# Phase 1 Week 2 (WO-0018).
bincode = "1.3"

# In-process `ripgrep` libraries — back the `search_code` MCP tool's
# text-search half (`P1-W5-F09`, master-plan §3.2 row 4 / §18 Phase 1
# Week 5 line 1765).  `DEC-0009-search-code-in-process-ripgrep` picks
# these four crates over shelling out to the `rg` binary because (a) no
# system binary dep (phase-1 invariant #2 spirit), (b) anti-laziness
# contract forbids mocking critical deps, (c) identical behaviour by
# construction — `rg` itself is ~1000 lines of CLI glue on top of these
# libraries.  Used by `ucil-daemon::text_search` (WO-0035).
#
# Recursive filesystem walker that respects `.gitignore`, `.ignore`,
# hidden-file rules, and symlink cycles — the same walker `rg` uses.
ignore = "0.4"
# Per-file streaming searcher with bounded memory and line-by-line
# match emission.
grep-searcher = "0.1"
# Regex-based `Matcher` implementation — case-smart, Unicode-aware.
grep-regex = "0.1"
# The `Matcher` trait the searcher consumes.  Brought in explicitly so
# `ucil-daemon` can name the trait in its own type signatures.
grep-matcher = "0.1"

# rust-protobuf runtime — pulled in directly so `ucil-daemon::scip` can
# name `protobuf::Message::parse_from_bytes` and the `protobuf::Error`
# error type in its own signatures without going through the `scip`
# crate's re-exports.  Pinned to `=3.7.2` to align with `scip = "0.7"`'s
# canonical dependency (verified via crates.io API on 2026-05-06).
# DEC-0014's "transitive prost" hedge resolves to `protobuf` here:
# `scip` 0.7.x uses rust-protobuf, NOT `prost`.
protobuf = "=3.7.2"

# Sourcegraph SCIP protobuf Rust bindings — back the cross-repo symbol
# index pipeline introduced in `P2-W7-F08` (master-plan §3 line 284,
# §18 Phase 2 Week 7 line 1782; DEC-0014).  The 0.7 line is the current
# stable as of 2026-05-06; it is a thin generated-code wrapper around
# the canonical `index.proto` shipped by `sourcegraph/scip`.  Used by
# `ucil-daemon::scip::load_index_to_sqlite` to decode `.scip` payloads
# emitted by the `scip-rust` indexer.
scip = "0.7"

# ONNX Runtime Rust bindings — back the `ucil-embeddings` crate's
# embedding-inference layer (master-plan §18 Phase 2 Week 8 line 1786,
# `P2-W8-F01`).  `ort` 2.x is the current line; as of 2026-05-06 it is
# still in release-candidate (`2.0.0-rc.12`), so the version pin uses
# the explicit RC selector — Cargo refuses `^2` against pre-1.0
# pre-release semver.  The `download-binaries` feature pulls a
# pre-built CPU-only ONNX Runtime shared library into the build cache
# so `cargo test` does not require system-installed
# `libonnxruntime.so` (DEC-0006 spirit); ort-sys also requires a TLS
# feature to be selected when `download-binaries` is on, so we pair it
# with `tls-rustls` (rustls + `ring` provider — pure-Rust, no system
# OpenSSL).  `default-features = false` avoids the `cuda` /
# `tensorrt` / `directml` execution providers (F03 will gate these
# behind a feature flag).
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }

# n-dimensional arrays — used by `ucil-embeddings::onnx_inference` to
# wrap token-ID slices into the 2-D `Array2<i64>` tensor shape that
# ONNX Runtime expects (`[batch=1, seq=*]`).  `default-features =
# false` avoids the `rayon` / `blas` transitive bloat; `std` is the
# only feature we need for `from_shape_vec`.
ndarray = { version = "0.16", default-features = false, features = ["std"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
