[package]
name = "ucil-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL CLI binary: init, daemon, plugin, status, compact, query, config, lsp, quality, group commands"

[[bin]]
name = "ucil"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true
ucil-core = { path = "../ucil-core" }
ucil-daemon = { path = "../ucil-daemon" }

[dev-dependencies]
tempfile.workspace = true
