[package]
name = "ucil-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL core: incremental engine, knowledge graph, cache, fusion, CEQP"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
# Incremental computation framework — dependency DAG, invalidation,
# automatic early cutoff. Skeleton lands in this WO-0009; subsequent
# Phase-1 work will wire the file-watcher layer through it.
salsa = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile.workspace = true
# Property-based testing — forces every public serde type to round-trip
# through serialize/deserialize under arbitrary inputs, not just the
# hand-picked happy paths covered by the unit tests.
proptest = "1"
