[package]
name = "ucil-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL core: incremental engine, knowledge graph, cache, fusion, CEQP"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
# Object-safe async trait macro — used by the `GroupExecutor` trait in
# `cross_group.rs` (WO-0068, P3-W9-F03) per DEC-0008 §4 dependency-
# inversion seam pattern. Mirrors how `G1Source` uses async-trait in
# `ucil-daemon`. Workspace dep already declared in root Cargo.toml.
async-trait.workspace = true
# Timestamps for bi-temporal queries — RFC-3339 encoded `t_valid_from` /
# `t_valid_to` so SQLite TEXT string-comparison is lexicographic.  Used
# by `knowledge_graph::KnowledgeGraph::get_entity_as_of`.  Phase 1 Week
# 4 (WO-0024).
chrono = { workspace = true }
# Incremental computation framework — dependency DAG, invalidation,
# automatic early cutoff. Skeleton lands in this WO-0009; subsequent
# Phase-1 work will wire the file-watcher layer through it.
salsa = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile.workspace = true
# Property-based testing — forces every public serde type to round-trip
# through serialize/deserialize under arbitrary inputs, not just the
# hand-picked happy paths covered by the unit tests.
proptest = "1"
