[package]
name = "ucil-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL daemon binary: file watcher, plugin manager, query router, session manager"

[[bin]]
name = "ucil-daemon"
path = "src/main.rs"

# Mock MCP plugin used by the plugin-manager integration tests. Lives
# under tests/support/ so it is co-located with its only consumer.
# Integration tests reach it via `env!("CARGO_BIN_EXE_mock-mcp-plugin")`.
[[bin]]
name = "mock-mcp-plugin"
path = "tests/support/mock_mcp_plugin.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
# `rusqlite` is needed so the `executor` pipeline (P1-W4-F04) can build
# `rusqlite::params!` bindings inside the `KnowledgeGraph::execute_in_transaction`
# closure — the closure signature is `FnOnce(&Transaction) -> Result<_, rusqlite::Error>`.
rusqlite = { workspace = true }
ucil-core = { path = "../ucil-core" }
# `ucil-treesitter` drives the tree-sitter → knowledge-graph executor
# pipeline (P1-W4-F04, master-plan §18 Phase 1 Week 4 line 1759).
ucil-treesitter = { path = "../ucil-treesitter" }
# In-process `ripgrep` libraries back the `search_code` MCP tool's
# text-search half (`P1-W5-F09`, WO-0035 / DEC-0009).  Only the
# `ucil-daemon::text_search` module consumes them.
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
grep-matcher.workspace = true
# `tree-sitter` + `streaming-iterator` back the `understand_code` MCP
# tool's `count_imports` helper (`P1-W4-F09`, WO-0036).  The helper
# compiles language-specific `Query` strings against the parse tree
# emitted by `ucil_treesitter::Parser`; `streaming-iterator` is needed
# because tree-sitter 0.25's `QueryMatches` yields captures via
# `StreamingIterator`, not `Iterator`.
tree-sitter.workspace = true
streaming-iterator.workspace = true
# `async-trait` macro — allows the `SerenaHoverClient` trait in
# `executor.rs` (WO-0037 for P1-W5-F02) to declare an `async fn hover`
# method while remaining object-safe so downstream wiring can hold an
# `Arc<dyn SerenaHoverClient>` against the live Serena MCP channel.
async-trait = { workspace = true }
# `tempfile::TempDir` backs the per-invocation `KnowledgeGraph` SQLite
# file the `mcp --stdio --repo <PATH>` code path bootstraps in
# `main.rs` (WO-0041).  The temp directory's lifetime is bound to the
# `serve` loop so SQLite's WAL file + lock file stay on disk for the
# duration of the stdio session.
tempfile.workspace = true

[dev-dependencies]
tempfile.workspace = true
